--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id="grid-container">
+
+    </div>
 
 
     <script src="./script.js"></script>
