--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <button id="grid-size-btn">Click me to specify grid dimensions</button>
     <div id="grid-container"></div>
 
     <script src="./script.js"></script>
